feat[dao]: added pagination support for fetch customer info api
